--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                 </div>
             </div>      
         </section>
-        <section class = "team wrapper">
-            <div class = "team__container">
-                <h2>Meet the team!</h2>
+        <section class = "team">
+            <div class = "team__container wrapper">
+                <h2 class = "team__title">Meet the team!</h2>
                 <div class = "team__member">
                     <img class = "team__image" src="./assets/ceo.png" alt="Owner">
                     <p class = "team__name">Benjamin Larner</p>
@@ -57,7 +57,7 @@
                 </div>
                 <div class = "team__member">
                     <img class = "team__image" src="./assets/nutritionist.png" alt="Nutritionist">
-                    <p class = "team__name">Simone Salmon</p>
+                    <p class = "team__name">Suzy Salmon</p>
                     <p class = "team__role">Nutritionist</p>
                 </div>
             </div>
